[gd_scene load_steps=8 format=2]

[ext_resource path="res://04_assets/fonts/abel-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://03_scripts/SAVEDSCORES.gd" type="Script" id=2]
[ext_resource path="res://04_assets/BUTTONS_SMALL/07_Back.png" type="Texture" id=3]
[ext_resource path="res://04_assets/BUTTONS_SMALL/mask.png" type="BitMap" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="SAVEDSCORES" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 2 )

[node name="Plate" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.12549 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.823529, 0, 0.823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 470.0
margin_bottom = 688.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 460.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
text = "BEST SCORES"
align = 1

[node name="Scores" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 81.0
margin_right = 460.0
margin_bottom = 637.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNr1" type="HBoxContainer" parent="VBoxContainer/Scores"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 460.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nr" type="Label" parent="VBoxContainer/Scores/ScoreNr1"]
margin_right = 30.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "1."

[node name="Difficulty" type="Label" parent="VBoxContainer/Scores/ScoreNr1"]
margin_left = 34.0
margin_right = 118.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "HARD"

[node name="Level" type="Label" parent="VBoxContainer/Scores/ScoreNr1"]
margin_left = 122.0
margin_right = 174.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "lev:"

[node name="LevelNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr1"]
margin_left = 178.0
margin_right = 199.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Killed" type="Label" parent="VBoxContainer/Scores/ScoreNr1"]
margin_left = 203.0
margin_right = 293.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "killed:"

[node name="KillNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr1"]
margin_left = 297.0
margin_right = 318.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="ScoreNr2" type="HBoxContainer" parent="VBoxContainer/Scores"]
modulate = Color( 1, 0.5, 0.5, 1 )
margin_top = 56.0
margin_right = 460.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nr" type="Label" parent="VBoxContainer/Scores/ScoreNr2"]
margin_right = 29.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "2."

[node name="Difficulty" type="Label" parent="VBoxContainer/Scores/ScoreNr2"]
margin_left = 33.0
margin_right = 90.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "MID"

[node name="Level" type="Label" parent="VBoxContainer/Scores/ScoreNr2"]
margin_left = 94.0
margin_right = 146.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "lev:"

[node name="LevelNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr2"]
margin_left = 150.0
margin_right = 171.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Killed" type="Label" parent="VBoxContainer/Scores/ScoreNr2"]
margin_left = 175.0
margin_right = 265.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "killed:"

[node name="KillNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr2"]
margin_left = 269.0
margin_right = 290.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="ScoreNr3" type="HBoxContainer" parent="VBoxContainer/Scores"]
margin_top = 112.0
margin_right = 460.0
margin_bottom = 164.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nr" type="Label" parent="VBoxContainer/Scores/ScoreNr3"]
margin_right = 30.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "3."

[node name="Difficulty" type="Label" parent="VBoxContainer/Scores/ScoreNr3"]
margin_left = 34.0
margin_right = 114.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "EASY"

[node name="Level" type="Label" parent="VBoxContainer/Scores/ScoreNr3"]
margin_left = 118.0
margin_right = 170.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "lev:"

[node name="LevelNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr3"]
margin_left = 174.0
margin_right = 195.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Killed" type="Label" parent="VBoxContainer/Scores/ScoreNr3"]
margin_left = 199.0
margin_right = 289.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "killed:"

[node name="KillNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr3"]
margin_left = 293.0
margin_right = 314.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="ScoreNr4" type="HBoxContainer" parent="VBoxContainer/Scores"]
margin_top = 168.0
margin_right = 460.0
margin_bottom = 220.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nr" type="Label" parent="VBoxContainer/Scores/ScoreNr4"]
margin_right = 29.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "4."

[node name="Difficulty" type="Label" parent="VBoxContainer/Scores/ScoreNr4"]
margin_left = 33.0
margin_right = 113.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "EASY"

[node name="Level" type="Label" parent="VBoxContainer/Scores/ScoreNr4"]
margin_left = 117.0
margin_right = 169.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "lev:"

[node name="LevelNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr4"]
margin_left = 173.0
margin_right = 194.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Killed" type="Label" parent="VBoxContainer/Scores/ScoreNr4"]
margin_left = 198.0
margin_right = 288.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "killed:"

[node name="KillNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr4"]
margin_left = 292.0
margin_right = 313.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="ScoreNr5" type="HBoxContainer" parent="VBoxContainer/Scores"]
margin_top = 224.0
margin_right = 460.0
margin_bottom = 276.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nr" type="Label" parent="VBoxContainer/Scores/ScoreNr5"]
margin_right = 30.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "5."

[node name="Difficulty" type="Label" parent="VBoxContainer/Scores/ScoreNr5"]
margin_left = 34.0
margin_right = 114.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "EASY"

[node name="Level" type="Label" parent="VBoxContainer/Scores/ScoreNr5"]
margin_left = 118.0
margin_right = 170.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "lev:"

[node name="LevelNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr5"]
margin_left = 174.0
margin_right = 195.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Killed" type="Label" parent="VBoxContainer/Scores/ScoreNr5"]
margin_left = 199.0
margin_right = 289.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "killed:"

[node name="KillNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr5"]
margin_left = 293.0
margin_right = 314.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="ScoreNr6" type="HBoxContainer" parent="VBoxContainer/Scores"]
margin_top = 280.0
margin_right = 460.0
margin_bottom = 332.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nr" type="Label" parent="VBoxContainer/Scores/ScoreNr6"]
margin_right = 30.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "6."

[node name="Difficulty" type="Label" parent="VBoxContainer/Scores/ScoreNr6"]
margin_left = 34.0
margin_right = 114.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "EASY"

[node name="Level" type="Label" parent="VBoxContainer/Scores/ScoreNr6"]
margin_left = 118.0
margin_right = 170.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "lev:"

[node name="LevelNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr6"]
margin_left = 174.0
margin_right = 195.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Killed" type="Label" parent="VBoxContainer/Scores/ScoreNr6"]
margin_left = 199.0
margin_right = 289.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "killed:"

[node name="KillNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr6"]
margin_left = 293.0
margin_right = 314.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="ScoreNr7" type="HBoxContainer" parent="VBoxContainer/Scores"]
margin_top = 336.0
margin_right = 460.0
margin_bottom = 388.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nr" type="Label" parent="VBoxContainer/Scores/ScoreNr7"]
margin_right = 30.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "7."

[node name="Difficulty" type="Label" parent="VBoxContainer/Scores/ScoreNr7"]
margin_left = 34.0
margin_right = 114.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "EASY"

[node name="Level" type="Label" parent="VBoxContainer/Scores/ScoreNr7"]
margin_left = 118.0
margin_right = 170.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "lev:"

[node name="LevelNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr7"]
margin_left = 174.0
margin_right = 195.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Killed" type="Label" parent="VBoxContainer/Scores/ScoreNr7"]
margin_left = 199.0
margin_right = 289.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "killed:"

[node name="KillNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr7"]
margin_left = 293.0
margin_right = 314.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="ScoreNr8" type="HBoxContainer" parent="VBoxContainer/Scores"]
margin_top = 392.0
margin_right = 460.0
margin_bottom = 444.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nr" type="Label" parent="VBoxContainer/Scores/ScoreNr8"]
margin_right = 30.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "8."

[node name="Difficulty" type="Label" parent="VBoxContainer/Scores/ScoreNr8"]
margin_left = 34.0
margin_right = 114.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "EASY"

[node name="Level" type="Label" parent="VBoxContainer/Scores/ScoreNr8"]
margin_left = 118.0
margin_right = 170.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "lev:"

[node name="LevelNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr8"]
margin_left = 174.0
margin_right = 195.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Killed" type="Label" parent="VBoxContainer/Scores/ScoreNr8"]
margin_left = 199.0
margin_right = 289.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "killed:"

[node name="KillNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr8"]
margin_left = 293.0
margin_right = 314.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="ScoreNr9" type="HBoxContainer" parent="VBoxContainer/Scores"]
margin_top = 448.0
margin_right = 460.0
margin_bottom = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nr" type="Label" parent="VBoxContainer/Scores/ScoreNr9"]
margin_right = 30.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "9."

[node name="Difficulty" type="Label" parent="VBoxContainer/Scores/ScoreNr9"]
margin_left = 34.0
margin_right = 114.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "EASY"

[node name="Level" type="Label" parent="VBoxContainer/Scores/ScoreNr9"]
margin_left = 118.0
margin_right = 170.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "lev:"

[node name="LevelNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr9"]
margin_left = 174.0
margin_right = 195.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Killed" type="Label" parent="VBoxContainer/Scores/ScoreNr9"]
margin_left = 199.0
margin_right = 289.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "killed:"

[node name="KillNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr9"]
margin_left = 293.0
margin_right = 314.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="ScoreNr10" type="HBoxContainer" parent="VBoxContainer/Scores"]
margin_top = 504.0
margin_right = 460.0
margin_bottom = 556.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nr" type="Label" parent="VBoxContainer/Scores/ScoreNr10"]
margin_right = 51.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "10."

[node name="Difficulty" type="Label" parent="VBoxContainer/Scores/ScoreNr10"]
margin_left = 55.0
margin_right = 135.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "EASY"

[node name="Level" type="Label" parent="VBoxContainer/Scores/ScoreNr10"]
margin_left = 139.0
margin_right = 191.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "lev:"

[node name="LevelNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr10"]
margin_left = 195.0
margin_right = 216.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Killed" type="Label" parent="VBoxContainer/Scores/ScoreNr10"]
margin_left = 220.0
margin_right = 310.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "killed:"

[node name="KillNumber" type="Label" parent="VBoxContainer/Scores/ScoreNr10"]
margin_left = 314.0
margin_right = 335.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 3 )
text = "0"

[node name="BackButton" type="TextureButton" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -69.9999
margin_right = 1648.0
margin_bottom = 186.0
rect_scale = Vector2( 0.25, 0.25 )
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_click_mask = ExtResource( 4 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="BackButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="BackButton" to="." method="_on_TextureButton_button_up"]
[connection signal="toggled" from="BackButton" to="." method="_on_TextureButton_toggled"]
